# adaboostplayground

./: .cproject  .gitignore  Adaboost.cpp  Adaboost.h  CMakeLists.txt  Classification.h  Common.h  Data.cpp  Data.h  Detector.cpp  Detector.h  Haarwavelet.cpp  Haarwavelet.h  Haarwaveletutilities.cpp  Haarwaveletutilities.h  LabeledExample.h  Main.cpp  ResamplingWeakLearner.h  ReweightingWeakLearner.h  StrongHypothesis.cpp  StrongHypothesis.h  WeakHypothesis.cpp  WeakHypothesis.h  WeakLearner.cpp  WeakLearner.h  adaboost.h  common.h  dataprovider.cpp  dataprovider.h  detect.cpp  haarclassifier.cpp  haarclassifier.h  haarwavelet.cpp  haarwavelet.h  labeledexample.h  main.cpp  prototype_trainclassifier.h  rocmyworld.sh  run.sh  sampleextractor.cpp  (+20 more)
Debug/: makefile
Default/: Main.d  adaboostplayground  makefile  subdir.mk
common/: CMakeLists.txt  common.h  labeledexample.h  weakhypothesis.h
data/: firstLameTrain.txt
test/: CMakeLists.txt  detect_pavani.cpp  rocmyworld.sh  scanner.h  showregions.cpp  template_testclassifier.h  test.sh  test_adhikari_classifier.cpp  test_normhist_classifier.cpp  test_pavani_classifier.cpp  test_rasolzadeh_classifier.cpp  test_vj_classifier.cpp  testdatabase.cpp
train/: CMakeLists.txt  adaboost.h  decisionstumpweaklearner.h  progresscallback.cpp  progresscallback.h  sampleextractor.cpp  sampleextractor.h  template_trainclassifier.h  train_adhikari_classifier.cpp  train_band_classifier.cpp  train_histhist_classifier.cpp  train_my2nd_classifier.cpp  train_my3rd_classifier.cpp  train_my_classifier.cpp  train_pavani_classifier.cpp  train_rasolzadeh_classifier.cpp  train_vj_classifier.cpp  weaklearner.h
